# Book_Samples

./: .gitignore  README.md
OpenCV3编程入门/chapter01/: CMakeLists.txt  blur.cc  canny.cc  hello_opencv.cc  video.cc
OpenCV3编程入门/chapter02/: CMakeLists.txt
OpenCV3编程入门/chapter1/: CMakeLists.txt  camera.cc  canny_camera.cc  erode.cc
OpenCV3编程入门/chapter2/: CMakeLists.txt
Professional_CUDA_C_Programming/chapter01/: CMakeLists.txt  hello.cu
Professional_CUDA_C_Programming/chapter02/: CMakeLists.txt  checkDeviceInfor.cu  checkDimension.cu  checkThreadIndex.cu  defineGridBlock.cu  sumArraysOnGPU-small-case.cu  sumArraysOnGPU-timer.cu  sumArraysOnHost.c  sumMatrixOnGPU-1D-grid-1D-block.cu  sumMatrixOnGPU-2D-grid-1D-block.cu  sumMatrixOnGPU-2D-grid-2D-block.cu
